chore: refactor frontend java classes to use newer GWT methods and components